--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mz-packer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Magomadov Zurab",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^3.0.3"
