--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "mz-packer",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "author": "Magomadov Zurab",
   "license": "ISC",
-  "devDependencies": {
-    "typescript": "^3.0.3"
-  },
+  "devDependencies": {},
   "peerDependencies": {
-    "rxjs": "^6.3.2"
+    "rxjs": "^6.3.2",
+    "typescript": "^3.0.3"
   }
 }
